<resources>
    <string name="lectures">Lectures</string>
    <string name="workshops">Workshops</string>
    <string name="exhibitions">Expo</string>
    <string name="profile">Profile</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="app_name">Anwesha 2k19</string>
    <string name="action_settings">Settings</string>
    <string name="aftermovie">Aftermovie 2K18</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="my_profile">My Profile</string>
    <string name="events">Events</string>
    <string name="campusambassador">Campus Ambassador</string>
    <string name="schedule">Timeline</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="multicity">Multicity Auditions</string>
    <string name="log_in_label">Log In</string>
    <string name="email_hint">Email</string>
    <string name="confirm_hint">Confirm Password</string>
    <string name="team">Team</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="developers">App Developers</string>
    <string name="sponsors">Sponsors</string>
    <string name="about">About</string>
    <string name="gallery">Gallery</string>
    <string name="social">Social</string>
    <string name="SignUp">Sign Up</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>

    <string name="SignIn">Sign In</string>
    <string name="NJACK_Events">NJACK Events</string>
    <string name="ACE_Events">ACE Events</string>
    <string name="SAE_Events">SAE Events</string>
    <string name="SCME_Events">SCME Events</string>
    <string name="Sparkonics_Events">Sparkonics Events</string>
    <string name="Threshold_Events">Threshold Events</string>
    <string name="login_status">login_status</string>
    <string name="full_name">full_name</string>
    <string name="id">id</string>
    <string name="college_name">college_name</string>
    <string name="event_participated">event_participated</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="college_hint">College</string>
    <string name="email_id_hint">Email ID</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_button">REGISTER</string>
    <string name="error_invalid_email">Invalid Email!</string>
    <string name="invalid_password_length">Length should be more than 5 characters</string>
    <string name="error_password_match">Passwords don\'t match</string>
    <string name="error_empty_field">Empty Field</string>
    <string name="mobile_no_hint">Mobile No.</string>
    <string name="error_invalid_mobile_no">Invalid Mobile No.</string>
    <string name="register_url">https://www.anwesha.info/user/register/User/</string>
    <string name="api_key">99537874e694ecc9323cc986dd452d2502740dcc</string>
    <string name="register_param_name">name</string>
    <string name="register_param_college">college</string>
    <string name="register_param_emailid">email</string>
    <string name="register_param_password">password</string>
    <string name="register_param_mobile">mobile</string>
    <string name="register_param_dob">dob</string>
    <string name="register_param_ref_code">referalcode</string>
    <string name="register_param_apiKey">apiKey</string>
    <string name="JSON_status">status</string>
    <string name="message_registration_success">Registration Successful.  Check your Email for the UniqueID!!</string>
    <string name="message_registration_duplicate">This Email is already registered. Please Sign In</string>
    <string name="Clubs"> Clubs</string>
    <string name="LoremIpsum">Anwesha is a Techno-Cultural extravaganza held every year in spring. Since its inception in 2010, it has grown into one of the most anticipated student-organized youth festival. From NASA Scientists to Dancing Idols, from Ethical Hackers to Heartthrob Singers, from Game Development to Gaming Wars, from Robotics to Dramatics, from Model United Nations to Foreign Exchange Conferences, from Sufi to Death Metal, Anwesha, with the tag “Think Dream Live”, promises every youth to full-fill his/her dreams to the maximum. It involves student volunteers who work by interest and promote intellectualism and creativity through their organization and maintain the brand value of IIT. Anwesha meaning “Quest” in Sanskrit has been a quest for every participant to reach his full potential. Its latest edition received participation around 5000 and footfall of around 20000 involving many computer geeks, gaming freaks, technoholics, music &amp; dance maniacs and rock bands hailing from well-known institutes across the country.</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="share_to">Share To</string>
    <string name="share_message">Check out this event in IIT Patna\'s technical fest Celesta:</string>
    <string name="name">Name</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="description">Description</string>
    <string name="rules_and_regulations">Rules &amp; Regulations</string>
    <string name="event_organizers">Event Organizers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="keep_checking_for_updates">Keep checking for updates.</string>
    <string name="follow_us">Follow us </string>
    <string name="official_website">Our official website</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="log_in_successful">Log In Successful</string>

    <!--FACEBOOK-->
    <string name="facebook_app_id">1088640574599664</string>
    <string name="fb_login_protocol_scheme">fb1088640574599664</string>
    <string name="email">Email</string>
    <string name="gender">gender</string>
    <string name="dateOfBirth">dateOfBirth</string>
    <string name="facebook_id">fb_id</string>
    <string name="first_name">first_name</string>
    <string name="last_name">last_name</string>
    <string name="Gender">Gender</string>
    <string name="facebook_logged_in">facebook_logged_in</string>
    <string name="Birthday">Birthday</string>
    <string name="register_param_fb_id">fbID</string>
    <string name="register_param_gender">sex</string>
    <string name="referral_code_hint">Referral Code, if any</string>
    <string name="city_hint">City</string>
    <string name="register_param_city">city</string>
    <string name="anwesha_id">AnweshaID</string>
    <string name="college">college</string>
    <string name="mobile">mobile</string>
    <string name="city">city</string>
    <string name="ref_code">ref_code</string>
    <string name="fee_paid">feePaid</string>
    <string name="qr_url">qrurl</string>
    <string name="qr_code_file_name">qr_code.png</string>
    <string name="qr_code_folder_name">QR</string>
    <string name="login_api_url">https://www.anwesha.info/login/</string>
    <string name="login_error">Error logging in! Please try again later.</string>
    <string name="sign_in_param_username">username</string>
    <string name="is_qr_downloaded">isQRDownloaded</string>
    <string name="will_be_updated_soon">Registration Link will be updated soon.</string>
    <string name="events_list">events_list</string>
    <string name="key">key</string>
    <string name="anwesha">Anwesha</string>
    <string name="map">Map</string>
    <string name="tap_for_more_info">Tap for more information!</string>
    <string name="sign_in_first">Please sign in/register first</string>
    <string name="already_registered">You\'re registered!!</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="default_notification_channel_id">notify</string>

</resources>
