<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.anwesha2k18.iitp.activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:background="#FFCD03">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/first_name_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableTint="#000000"
                    android:hint="@string/first_name_hint"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="#000000" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/last_name_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_last_page_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableTint="#000000"
                    android:hint="@string/last_name_hint"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="#000000" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                tools:text="rbaebe" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/college_name_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/college_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_school_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableTint="#000000"
                    android:hint="@string/college_hint"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="#000000" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/city_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/city"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_place_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableTint="#000000"
                    android:hint="@string/city_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="#000000" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/birthday_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/birthday"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_date_range_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableTint="#000000"
                    android:focusable="false"
                    android:hint="@string/Birthday"
                    android:inputType="date"
                    android:maxLines="1"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_id_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableTint="#000000"
                    android:hint="@string/email_id_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="#000000" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mobile_no_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mobile_no"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableTint="#000000"
                    android:hint="@string/mobile_no_hint"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="#000000" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_security_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableTint="#000000"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#000000" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirm_password_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_confirm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_security_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableTint="#000000"
                    android:hint="@string/confirm_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#000000" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ref_code_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ref_code"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="8dp"
                    android:drawableTint="#000000"
                    android:hint="@string/referral_code_hint"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="#000000" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorSponsors"
            android:text="@string/register_button" />
    </LinearLayout>
</ScrollView>
